corrcting auth logic
